--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ button{
   background-color: transparent;
   border: none;
   cursor: pointer;
+  transition: 0.5s;
+}
+
+button:hover{
+  transform: scale(1.05);
 }
 
 i{
