--- a/src/components/navbar/NavBarComponent.css
+++ b/src/components/navbar/NavBarComponent.css
@@ -2,6 +2,7 @@ nav .nav-header{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 12px;
 }
 
 nav .nav-header .w-3p{
